Compiladores/LenguajePatitoV1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA ID pn_programa_inicio PTOCOMA vars_opcional funcs_opcional INICIO cuerpo FIN
Rule 2     pn_programa_inicio -> <empty>
Rule 3     vars_opcional -> VARS lista_decl_var
Rule 4     vars_opcional -> empty
Rule 5     funcs_opcional -> lista_funcs
Rule 6     funcs_opcional -> empty
Rule 7     lista_decl_var -> decl_var
Rule 8     lista_decl_var -> decl_var lista_decl_var
Rule 9     decl_var -> ids DOSPTOS tipo PTOCOMA
Rule 10    ids -> ID
Rule 11    ids -> ids COMA ID
Rule 12    tipo -> ENTERO
Rule 13    tipo -> FLOTANTE
Rule 14    lista_funcs -> func_def
Rule 15    lista_funcs -> func_def lista_funcs
Rule 16    func_def -> tipo_retorno pn_func_inicio ID LPAREN params RPAREN LBRACE vars_opcional cuerpo RBRACE pn_func_fin PTOCOMA
Rule 17    pn_func_inicio -> <empty>
Rule 18    pn_func_fin -> <empty>
Rule 19    tipo_retorno -> tipo
Rule 20    tipo_retorno -> NULA
Rule 21    params -> lista_params
Rule 22    params -> empty
Rule 23    lista_params -> ID DOSPTOS tipo pn_param
Rule 24    lista_params -> lista_params COMA ID DOSPTOS tipo pn_param
Rule 25    pn_param -> <empty>
Rule 26    cuerpo -> LBRACE lista_estatuto RBRACE
Rule 27    lista_estatuto -> estatuto lista_estatuto
Rule 28    lista_estatuto -> empty
Rule 29    estatuto -> asigna
Rule 30    estatuto -> condicion
Rule 31    estatuto -> ciclo
Rule 32    estatuto -> imprime
Rule 33    estatuto -> llamada PTOCOMA
Rule 34    estatuto -> cuerpo
Rule 35    asigna -> ID ASIG expresion PTOCOMA
Rule 36    imprime -> ESCRIBE LPAREN lista_imprime RPAREN PTOCOMA
Rule 37    lista_imprime -> item_imprime
Rule 38    lista_imprime -> lista_imprime COMA item_imprime
Rule 39    item_imprime -> expresion
Rule 40    item_imprime -> LETRERO
Rule 41    item_imprime -> LETRERO_KW
Rule 42    condicion -> SI LPAREN expresion RPAREN cuerpo PTOCOMA
Rule 43    condicion -> SI LPAREN expresion RPAREN cuerpo SINO cuerpo PTOCOMA
Rule 44    ciclo -> MIENTRAS LPAREN expresion RPAREN HAZ cuerpo PTOCOMA
Rule 45    llamada -> ID LPAREN RPAREN
Rule 46    llamada -> ID LPAREN lista_args RPAREN
Rule 47    lista_args -> expresion
Rule 48    lista_args -> lista_args COMA expresion
Rule 49    expresion -> exp
Rule 50    expresion -> exp OPREL exp
Rule 51    OPREL -> MAYOR
Rule 52    OPREL -> MENOR
Rule 53    OPREL -> DIF
Rule 54    OPREL -> IGUALDAD
Rule 55    OPREL -> MAYORIG
Rule 56    OPREL -> MENORIG
Rule 57    exp -> termino
Rule 58    exp -> exp MAS termino
Rule 59    exp -> exp MENOS termino
Rule 60    termino -> factor
Rule 61    termino -> termino POR factor
Rule 62    termino -> termino DIV factor
Rule 63    factor -> LPAREN expresion RPAREN
Rule 64    factor -> MAS factor
Rule 65    factor -> MENOS factor
Rule 66    factor -> llamada
Rule 67    factor -> ID
Rule 68    factor -> cte
Rule 69    cte -> CTE_ENT
Rule 70    cte -> CTE_FLOT
Rule 71    empty -> <empty>

Terminals, with rules where they appear

ASIG                 : 35
COMA                 : 11 24 38 48
CTE_ENT              : 69
CTE_FLOT             : 70
DIF                  : 53
DIV                  : 62
DOSPTOS              : 9 23 24
ENTERO               : 12
ESCRIBE              : 36
FIN                  : 1
FLOTANTE             : 13
HAZ                  : 44
ID                   : 1 10 11 16 23 24 35 45 46 67
IGUALDAD             : 54
INICIO               : 1
LBRACE               : 16 26
LETRERO              : 40
LETRERO_KW           : 41
LPAREN               : 16 36 42 43 44 45 46 63
MAS                  : 58 64
MAYOR                : 51
MAYORIG              : 55
MENOR                : 52
MENORIG              : 56
MENOS                : 59 65
MIENTRAS             : 44
NULA                 : 20
POR                  : 61
PROGRAMA             : 1
PTOCOMA              : 1 9 16 33 35 36 42 43 44
RBRACE               : 16 26
RPAREN               : 16 36 42 43 44 45 46 63
SI                   : 42 43
SINO                 : 43
VARS                 : 3
error                : 

Nonterminals, with rules where they appear

OPREL                : 50
asigna               : 29
ciclo                : 31
condicion            : 30
cte                  : 68
cuerpo               : 1 16 34 42 43 43 44
decl_var             : 7 8
empty                : 4 6 22 28
estatuto             : 27
exp                  : 49 50 50 58 59
expresion            : 35 39 42 43 44 47 48 63
factor               : 60 61 62 64 65
func_def             : 14 15
funcs_opcional       : 1
ids                  : 9 11
imprime              : 32
item_imprime         : 37 38
lista_args           : 46 48
lista_decl_var       : 3 8
lista_estatuto       : 26 27
lista_funcs          : 5 15
lista_imprime        : 36 38
lista_params         : 21 24
llamada              : 33 66
params               : 16
pn_func_fin          : 16
pn_func_inicio       : 16
pn_param             : 23 24
pn_programa_inicio   : 1
programa             : 0
termino              : 57 58 59 61 62
tipo                 : 9 19 23 24
tipo_retorno         : 16
vars_opcional        : 1 16

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA ID pn_programa_inicio PTOCOMA vars_opcional funcs_opcional INICIO cuerpo FIN

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . ID pn_programa_inicio PTOCOMA vars_opcional funcs_opcional INICIO cuerpo FIN

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAMA ID . pn_programa_inicio PTOCOMA vars_opcional funcs_opcional INICIO cuerpo FIN
    (2) pn_programa_inicio -> .

    PTOCOMA         reduce using rule 2 (pn_programa_inicio -> .)

    pn_programa_inicio             shift and go to state 4

state 4

    (1) programa -> PROGRAMA ID pn_programa_inicio . PTOCOMA vars_opcional funcs_opcional INICIO cuerpo FIN

    PTOCOMA         shift and go to state 5


state 5

    (1) programa -> PROGRAMA ID pn_programa_inicio PTOCOMA . vars_opcional funcs_opcional INICIO cuerpo FIN
    (3) vars_opcional -> . VARS lista_decl_var
    (4) vars_opcional -> . empty
    (71) empty -> .

    VARS            shift and go to state 7
    NULA            reduce using rule 71 (empty -> .)
    ENTERO          reduce using rule 71 (empty -> .)
    FLOTANTE        reduce using rule 71 (empty -> .)
    INICIO          reduce using rule 71 (empty -> .)

    vars_opcional                  shift and go to state 6
    empty                          shift and go to state 8

state 6

    (1) programa -> PROGRAMA ID pn_programa_inicio PTOCOMA vars_opcional . funcs_opcional INICIO cuerpo FIN
    (5) funcs_opcional -> . lista_funcs
    (6) funcs_opcional -> . empty
    (14) lista_funcs -> . func_def
    (15) lista_funcs -> . func_def lista_funcs
    (71) empty -> .
    (16) func_def -> . tipo_retorno pn_func_inicio ID LPAREN params RPAREN LBRACE vars_opcional cuerpo RBRACE pn_func_fin PTOCOMA
    (19) tipo_retorno -> . tipo
    (20) tipo_retorno -> . NULA
    (12) tipo -> . ENTERO
    (13) tipo -> . FLOTANTE

    INICIO          reduce using rule 71 (empty -> .)
    NULA            shift and go to state 15
    ENTERO          shift and go to state 16
    FLOTANTE        shift and go to state 17

    funcs_opcional                 shift and go to state 9
    lista_funcs                    shift and go to state 10
    empty                          shift and go to state 11
    func_def                       shift and go to state 12
    tipo_retorno                   shift and go to state 13
    tipo                           shift and go to state 14

state 7

    (3) vars_opcional -> VARS . lista_decl_var
    (7) lista_decl_var -> . decl_var
    (8) lista_decl_var -> . decl_var lista_decl_var
    (9) decl_var -> . ids DOSPTOS tipo PTOCOMA
    (10) ids -> . ID
    (11) ids -> . ids COMA ID

    ID              shift and go to state 21

    lista_decl_var                 shift and go to state 18
    decl_var                       shift and go to state 19
    ids                            shift and go to state 20

state 8

    (4) vars_opcional -> empty .

    NULA            reduce using rule 4 (vars_opcional -> empty .)
    ENTERO          reduce using rule 4 (vars_opcional -> empty .)
    FLOTANTE        reduce using rule 4 (vars_opcional -> empty .)
    INICIO          reduce using rule 4 (vars_opcional -> empty .)
    LBRACE          reduce using rule 4 (vars_opcional -> empty .)


state 9

    (1) programa -> PROGRAMA ID pn_programa_inicio PTOCOMA vars_opcional funcs_opcional . INICIO cuerpo FIN

    INICIO          shift and go to state 22


state 10

    (5) funcs_opcional -> lista_funcs .

    INICIO          reduce using rule 5 (funcs_opcional -> lista_funcs .)


state 11

    (6) funcs_opcional -> empty .

    INICIO          reduce using rule 6 (funcs_opcional -> empty .)


state 12

    (14) lista_funcs -> func_def .
    (15) lista_funcs -> func_def . lista_funcs
    (14) lista_funcs -> . func_def
    (15) lista_funcs -> . func_def lista_funcs
    (16) func_def -> . tipo_retorno pn_func_inicio ID LPAREN params RPAREN LBRACE vars_opcional cuerpo RBRACE pn_func_fin PTOCOMA
    (19) tipo_retorno -> . tipo
    (20) tipo_retorno -> . NULA
    (12) tipo -> . ENTERO
    (13) tipo -> . FLOTANTE

    INICIO          reduce using rule 14 (lista_funcs -> func_def .)
    NULA            shift and go to state 15
    ENTERO          shift and go to state 16
    FLOTANTE        shift and go to state 17

    func_def                       shift and go to state 12
    lista_funcs                    shift and go to state 23
    tipo_retorno                   shift and go to state 13
    tipo                           shift and go to state 14

state 13

    (16) func_def -> tipo_retorno . pn_func_inicio ID LPAREN params RPAREN LBRACE vars_opcional cuerpo RBRACE pn_func_fin PTOCOMA
    (17) pn_func_inicio -> .

    ID              reduce using rule 17 (pn_func_inicio -> .)

    pn_func_inicio                 shift and go to state 24

state 14

    (19) tipo_retorno -> tipo .

    ID              reduce using rule 19 (tipo_retorno -> tipo .)


state 15

    (20) tipo_retorno -> NULA .

    ID              reduce using rule 20 (tipo_retorno -> NULA .)


state 16

    (12) tipo -> ENTERO .

    ID              reduce using rule 12 (tipo -> ENTERO .)
    PTOCOMA         reduce using rule 12 (tipo -> ENTERO .)
    COMA            reduce using rule 12 (tipo -> ENTERO .)
    RPAREN          reduce using rule 12 (tipo -> ENTERO .)


state 17

    (13) tipo -> FLOTANTE .

    ID              reduce using rule 13 (tipo -> FLOTANTE .)
    PTOCOMA         reduce using rule 13 (tipo -> FLOTANTE .)
    COMA            reduce using rule 13 (tipo -> FLOTANTE .)
    RPAREN          reduce using rule 13 (tipo -> FLOTANTE .)


state 18

    (3) vars_opcional -> VARS lista_decl_var .

    NULA            reduce using rule 3 (vars_opcional -> VARS lista_decl_var .)
    ENTERO          reduce using rule 3 (vars_opcional -> VARS lista_decl_var .)
    FLOTANTE        reduce using rule 3 (vars_opcional -> VARS lista_decl_var .)
    INICIO          reduce using rule 3 (vars_opcional -> VARS lista_decl_var .)
    LBRACE          reduce using rule 3 (vars_opcional -> VARS lista_decl_var .)


state 19

    (7) lista_decl_var -> decl_var .
    (8) lista_decl_var -> decl_var . lista_decl_var
    (7) lista_decl_var -> . decl_var
    (8) lista_decl_var -> . decl_var lista_decl_var
    (9) decl_var -> . ids DOSPTOS tipo PTOCOMA
    (10) ids -> . ID
    (11) ids -> . ids COMA ID

    NULA            reduce using rule 7 (lista_decl_var -> decl_var .)
    ENTERO          reduce using rule 7 (lista_decl_var -> decl_var .)
    FLOTANTE        reduce using rule 7 (lista_decl_var -> decl_var .)
    INICIO          reduce using rule 7 (lista_decl_var -> decl_var .)
    LBRACE          reduce using rule 7 (lista_decl_var -> decl_var .)
    ID              shift and go to state 21

    decl_var                       shift and go to state 19
    lista_decl_var                 shift and go to state 25
    ids                            shift and go to state 20

state 20

    (9) decl_var -> ids . DOSPTOS tipo PTOCOMA
    (11) ids -> ids . COMA ID

    DOSPTOS         shift and go to state 26
    COMA            shift and go to state 27


state 21

    (10) ids -> ID .

    DOSPTOS         reduce using rule 10 (ids -> ID .)
    COMA            reduce using rule 10 (ids -> ID .)


state 22

    (1) programa -> PROGRAMA ID pn_programa_inicio PTOCOMA vars_opcional funcs_opcional INICIO . cuerpo FIN
    (26) cuerpo -> . LBRACE lista_estatuto RBRACE

    LBRACE          shift and go to state 29

    cuerpo                         shift and go to state 28

state 23

    (15) lista_funcs -> func_def lista_funcs .

    INICIO          reduce using rule 15 (lista_funcs -> func_def lista_funcs .)


state 24

    (16) func_def -> tipo_retorno pn_func_inicio . ID LPAREN params RPAREN LBRACE vars_opcional cuerpo RBRACE pn_func_fin PTOCOMA

    ID              shift and go to state 30


state 25

    (8) lista_decl_var -> decl_var lista_decl_var .

    NULA            reduce using rule 8 (lista_decl_var -> decl_var lista_decl_var .)
    ENTERO          reduce using rule 8 (lista_decl_var -> decl_var lista_decl_var .)
    FLOTANTE        reduce using rule 8 (lista_decl_var -> decl_var lista_decl_var .)
    INICIO          reduce using rule 8 (lista_decl_var -> decl_var lista_decl_var .)
    LBRACE          reduce using rule 8 (lista_decl_var -> decl_var lista_decl_var .)


state 26

    (9) decl_var -> ids DOSPTOS . tipo PTOCOMA
    (12) tipo -> . ENTERO
    (13) tipo -> . FLOTANTE

    ENTERO          shift and go to state 16
    FLOTANTE        shift and go to state 17

    tipo                           shift and go to state 31

state 27

    (11) ids -> ids COMA . ID

    ID              shift and go to state 32


state 28

    (1) programa -> PROGRAMA ID pn_programa_inicio PTOCOMA vars_opcional funcs_opcional INICIO cuerpo . FIN

    FIN             shift and go to state 33


state 29

    (26) cuerpo -> LBRACE . lista_estatuto RBRACE
    (27) lista_estatuto -> . estatuto lista_estatuto
    (28) lista_estatuto -> . empty
    (29) estatuto -> . asigna
    (30) estatuto -> . condicion
    (31) estatuto -> . ciclo
    (32) estatuto -> . imprime
    (33) estatuto -> . llamada PTOCOMA
    (34) estatuto -> . cuerpo
    (71) empty -> .
    (35) asigna -> . ID ASIG expresion PTOCOMA
    (42) condicion -> . SI LPAREN expresion RPAREN cuerpo PTOCOMA
    (43) condicion -> . SI LPAREN expresion RPAREN cuerpo SINO cuerpo PTOCOMA
    (44) ciclo -> . MIENTRAS LPAREN expresion RPAREN HAZ cuerpo PTOCOMA
    (36) imprime -> . ESCRIBE LPAREN lista_imprime RPAREN PTOCOMA
    (45) llamada -> . ID LPAREN RPAREN
    (46) llamada -> . ID LPAREN lista_args RPAREN
    (26) cuerpo -> . LBRACE lista_estatuto RBRACE

    RBRACE          reduce using rule 71 (empty -> .)
    ID              shift and go to state 43
    SI              shift and go to state 44
    MIENTRAS        shift and go to state 45
    ESCRIBE         shift and go to state 46
    LBRACE          shift and go to state 29

    lista_estatuto                 shift and go to state 34
    estatuto                       shift and go to state 35
    empty                          shift and go to state 36
    asigna                         shift and go to state 37
    condicion                      shift and go to state 38
    ciclo                          shift and go to state 39
    imprime                        shift and go to state 40
    llamada                        shift and go to state 41
    cuerpo                         shift and go to state 42

state 30

    (16) func_def -> tipo_retorno pn_func_inicio ID . LPAREN params RPAREN LBRACE vars_opcional cuerpo RBRACE pn_func_fin PTOCOMA

    LPAREN          shift and go to state 47


state 31

    (9) decl_var -> ids DOSPTOS tipo . PTOCOMA

    PTOCOMA         shift and go to state 48


state 32

    (11) ids -> ids COMA ID .

    DOSPTOS         reduce using rule 11 (ids -> ids COMA ID .)
    COMA            reduce using rule 11 (ids -> ids COMA ID .)


state 33

    (1) programa -> PROGRAMA ID pn_programa_inicio PTOCOMA vars_opcional funcs_opcional INICIO cuerpo FIN .

    $end            reduce using rule 1 (programa -> PROGRAMA ID pn_programa_inicio PTOCOMA vars_opcional funcs_opcional INICIO cuerpo FIN .)


state 34

    (26) cuerpo -> LBRACE lista_estatuto . RBRACE

    RBRACE          shift and go to state 49


state 35

    (27) lista_estatuto -> estatuto . lista_estatuto
    (27) lista_estatuto -> . estatuto lista_estatuto
    (28) lista_estatuto -> . empty
    (29) estatuto -> . asigna
    (30) estatuto -> . condicion
    (31) estatuto -> . ciclo
    (32) estatuto -> . imprime
    (33) estatuto -> . llamada PTOCOMA
    (34) estatuto -> . cuerpo
    (71) empty -> .
    (35) asigna -> . ID ASIG expresion PTOCOMA
    (42) condicion -> . SI LPAREN expresion RPAREN cuerpo PTOCOMA
    (43) condicion -> . SI LPAREN expresion RPAREN cuerpo SINO cuerpo PTOCOMA
    (44) ciclo -> . MIENTRAS LPAREN expresion RPAREN HAZ cuerpo PTOCOMA
    (36) imprime -> . ESCRIBE LPAREN lista_imprime RPAREN PTOCOMA
    (45) llamada -> . ID LPAREN RPAREN
    (46) llamada -> . ID LPAREN lista_args RPAREN
    (26) cuerpo -> . LBRACE lista_estatuto RBRACE

    RBRACE          reduce using rule 71 (empty -> .)
    ID              shift and go to state 43
    SI              shift and go to state 44
    MIENTRAS        shift and go to state 45
    ESCRIBE         shift and go to state 46
    LBRACE          shift and go to state 29

    estatuto                       shift and go to state 35
    lista_estatuto                 shift and go to state 50
    empty                          shift and go to state 36
    asigna                         shift and go to state 37
    condicion                      shift and go to state 38
    ciclo                          shift and go to state 39
    imprime                        shift and go to state 40
    llamada                        shift and go to state 41
    cuerpo                         shift and go to state 42

state 36

    (28) lista_estatuto -> empty .

    RBRACE          reduce using rule 28 (lista_estatuto -> empty .)


state 37

    (29) estatuto -> asigna .

    ID              reduce using rule 29 (estatuto -> asigna .)
    SI              reduce using rule 29 (estatuto -> asigna .)
    MIENTRAS        reduce using rule 29 (estatuto -> asigna .)
    ESCRIBE         reduce using rule 29 (estatuto -> asigna .)
    LBRACE          reduce using rule 29 (estatuto -> asigna .)
    RBRACE          reduce using rule 29 (estatuto -> asigna .)


state 38

    (30) estatuto -> condicion .

    ID              reduce using rule 30 (estatuto -> condicion .)
    SI              reduce using rule 30 (estatuto -> condicion .)
    MIENTRAS        reduce using rule 30 (estatuto -> condicion .)
    ESCRIBE         reduce using rule 30 (estatuto -> condicion .)
    LBRACE          reduce using rule 30 (estatuto -> condicion .)
    RBRACE          reduce using rule 30 (estatuto -> condicion .)


state 39

    (31) estatuto -> ciclo .

    ID              reduce using rule 31 (estatuto -> ciclo .)
    SI              reduce using rule 31 (estatuto -> ciclo .)
    MIENTRAS        reduce using rule 31 (estatuto -> ciclo .)
    ESCRIBE         reduce using rule 31 (estatuto -> ciclo .)
    LBRACE          reduce using rule 31 (estatuto -> ciclo .)
    RBRACE          reduce using rule 31 (estatuto -> ciclo .)


state 40

    (32) estatuto -> imprime .

    ID              reduce using rule 32 (estatuto -> imprime .)
    SI              reduce using rule 32 (estatuto -> imprime .)
    MIENTRAS        reduce using rule 32 (estatuto -> imprime .)
    ESCRIBE         reduce using rule 32 (estatuto -> imprime .)
    LBRACE          reduce using rule 32 (estatuto -> imprime .)
    RBRACE          reduce using rule 32 (estatuto -> imprime .)


state 41

    (33) estatuto -> llamada . PTOCOMA

    PTOCOMA         shift and go to state 51


state 42

    (34) estatuto -> cuerpo .

    ID              reduce using rule 34 (estatuto -> cuerpo .)
    SI              reduce using rule 34 (estatuto -> cuerpo .)
    MIENTRAS        reduce using rule 34 (estatuto -> cuerpo .)
    ESCRIBE         reduce using rule 34 (estatuto -> cuerpo .)
    LBRACE          reduce using rule 34 (estatuto -> cuerpo .)
    RBRACE          reduce using rule 34 (estatuto -> cuerpo .)


state 43

    (35) asigna -> ID . ASIG expresion PTOCOMA
    (45) llamada -> ID . LPAREN RPAREN
    (46) llamada -> ID . LPAREN lista_args RPAREN

    ASIG            shift and go to state 52
    LPAREN          shift and go to state 53


state 44

    (42) condicion -> SI . LPAREN expresion RPAREN cuerpo PTOCOMA
    (43) condicion -> SI . LPAREN expresion RPAREN cuerpo SINO cuerpo PTOCOMA

    LPAREN          shift and go to state 54


state 45

    (44) ciclo -> MIENTRAS . LPAREN expresion RPAREN HAZ cuerpo PTOCOMA

    LPAREN          shift and go to state 55


state 46

    (36) imprime -> ESCRIBE . LPAREN lista_imprime RPAREN PTOCOMA

    LPAREN          shift and go to state 56


state 47

    (16) func_def -> tipo_retorno pn_func_inicio ID LPAREN . params RPAREN LBRACE vars_opcional cuerpo RBRACE pn_func_fin PTOCOMA
    (21) params -> . lista_params
    (22) params -> . empty
    (23) lista_params -> . ID DOSPTOS tipo pn_param
    (24) lista_params -> . lista_params COMA ID DOSPTOS tipo pn_param
    (71) empty -> .

    ID              shift and go to state 57
    RPAREN          reduce using rule 71 (empty -> .)

    params                         shift and go to state 58
    lista_params                   shift and go to state 59
    empty                          shift and go to state 60

state 48

    (9) decl_var -> ids DOSPTOS tipo PTOCOMA .

    ID              reduce using rule 9 (decl_var -> ids DOSPTOS tipo PTOCOMA .)
    NULA            reduce using rule 9 (decl_var -> ids DOSPTOS tipo PTOCOMA .)
    ENTERO          reduce using rule 9 (decl_var -> ids DOSPTOS tipo PTOCOMA .)
    FLOTANTE        reduce using rule 9 (decl_var -> ids DOSPTOS tipo PTOCOMA .)
    INICIO          reduce using rule 9 (decl_var -> ids DOSPTOS tipo PTOCOMA .)
    LBRACE          reduce using rule 9 (decl_var -> ids DOSPTOS tipo PTOCOMA .)


state 49

    (26) cuerpo -> LBRACE lista_estatuto RBRACE .

    FIN             reduce using rule 26 (cuerpo -> LBRACE lista_estatuto RBRACE .)
    ID              reduce using rule 26 (cuerpo -> LBRACE lista_estatuto RBRACE .)
    SI              reduce using rule 26 (cuerpo -> LBRACE lista_estatuto RBRACE .)
    MIENTRAS        reduce using rule 26 (cuerpo -> LBRACE lista_estatuto RBRACE .)
    ESCRIBE         reduce using rule 26 (cuerpo -> LBRACE lista_estatuto RBRACE .)
    LBRACE          reduce using rule 26 (cuerpo -> LBRACE lista_estatuto RBRACE .)
    RBRACE          reduce using rule 26 (cuerpo -> LBRACE lista_estatuto RBRACE .)
    PTOCOMA         reduce using rule 26 (cuerpo -> LBRACE lista_estatuto RBRACE .)
    SINO            reduce using rule 26 (cuerpo -> LBRACE lista_estatuto RBRACE .)


state 50

    (27) lista_estatuto -> estatuto lista_estatuto .

    RBRACE          reduce using rule 27 (lista_estatuto -> estatuto lista_estatuto .)


state 51

    (33) estatuto -> llamada PTOCOMA .

    ID              reduce using rule 33 (estatuto -> llamada PTOCOMA .)
    SI              reduce using rule 33 (estatuto -> llamada PTOCOMA .)
    MIENTRAS        reduce using rule 33 (estatuto -> llamada PTOCOMA .)
    ESCRIBE         reduce using rule 33 (estatuto -> llamada PTOCOMA .)
    LBRACE          reduce using rule 33 (estatuto -> llamada PTOCOMA .)
    RBRACE          reduce using rule 33 (estatuto -> llamada PTOCOMA .)


state 52

    (35) asigna -> ID ASIG . expresion PTOCOMA
    (49) expresion -> . exp
    (50) expresion -> . exp OPREL exp
    (57) exp -> . termino
    (58) exp -> . exp MAS termino
    (59) exp -> . exp MENOS termino
    (60) termino -> . factor
    (61) termino -> . termino POR factor
    (62) termino -> . termino DIV factor
    (63) factor -> . LPAREN expresion RPAREN
    (64) factor -> . MAS factor
    (65) factor -> . MENOS factor
    (66) factor -> . llamada
    (67) factor -> . ID
    (68) factor -> . cte
    (45) llamada -> . ID LPAREN RPAREN
    (46) llamada -> . ID LPAREN lista_args RPAREN
    (69) cte -> . CTE_ENT
    (70) cte -> . CTE_FLOT

    LPAREN          shift and go to state 68
    MAS             shift and go to state 65
    MENOS           shift and go to state 66
    ID              shift and go to state 61
    CTE_ENT         shift and go to state 71
    CTE_FLOT        shift and go to state 72

    expresion                      shift and go to state 62
    exp                            shift and go to state 63
    termino                        shift and go to state 64
    factor                         shift and go to state 67
    llamada                        shift and go to state 69
    cte                            shift and go to state 70

state 53

    (45) llamada -> ID LPAREN . RPAREN
    (46) llamada -> ID LPAREN . lista_args RPAREN
    (47) lista_args -> . expresion
    (48) lista_args -> . lista_args COMA expresion
    (49) expresion -> . exp
    (50) expresion -> . exp OPREL exp
    (57) exp -> . termino
    (58) exp -> . exp MAS termino
    (59) exp -> . exp MENOS termino
    (60) termino -> . factor
    (61) termino -> . termino POR factor
    (62) termino -> . termino DIV factor
    (63) factor -> . LPAREN expresion RPAREN
    (64) factor -> . MAS factor
    (65) factor -> . MENOS factor
    (66) factor -> . llamada
    (67) factor -> . ID
    (68) factor -> . cte
    (45) llamada -> . ID LPAREN RPAREN
    (46) llamada -> . ID LPAREN lista_args RPAREN
    (69) cte -> . CTE_ENT
    (70) cte -> . CTE_FLOT

    RPAREN          shift and go to state 73
    LPAREN          shift and go to state 68
    MAS             shift and go to state 65
    MENOS           shift and go to state 66
    ID              shift and go to state 61
    CTE_ENT         shift and go to state 71
    CTE_FLOT        shift and go to state 72

    lista_args                     shift and go to state 74
    expresion                      shift and go to state 75
    exp                            shift and go to state 63
    termino                        shift and go to state 64
    factor                         shift and go to state 67
    llamada                        shift and go to state 69
    cte                            shift and go to state 70

state 54

    (42) condicion -> SI LPAREN . expresion RPAREN cuerpo PTOCOMA
    (43) condicion -> SI LPAREN . expresion RPAREN cuerpo SINO cuerpo PTOCOMA
    (49) expresion -> . exp
    (50) expresion -> . exp OPREL exp
    (57) exp -> . termino
    (58) exp -> . exp MAS termino
    (59) exp -> . exp MENOS termino
    (60) termino -> . factor
    (61) termino -> . termino POR factor
    (62) termino -> . termino DIV factor
    (63) factor -> . LPAREN expresion RPAREN
    (64) factor -> . MAS factor
    (65) factor -> . MENOS factor
    (66) factor -> . llamada
    (67) factor -> . ID
    (68) factor -> . cte
    (45) llamada -> . ID LPAREN RPAREN
    (46) llamada -> . ID LPAREN lista_args RPAREN
    (69) cte -> . CTE_ENT
    (70) cte -> . CTE_FLOT

    LPAREN          shift and go to state 68
    MAS             shift and go to state 65
    MENOS           shift and go to state 66
    ID              shift and go to state 61
    CTE_ENT         shift and go to state 71
    CTE_FLOT        shift and go to state 72

    expresion                      shift and go to state 76
    exp                            shift and go to state 63
    termino                        shift and go to state 64
    factor                         shift and go to state 67
    llamada                        shift and go to state 69
    cte                            shift and go to state 70

state 55

    (44) ciclo -> MIENTRAS LPAREN . expresion RPAREN HAZ cuerpo PTOCOMA
    (49) expresion -> . exp
    (50) expresion -> . exp OPREL exp
    (57) exp -> . termino
    (58) exp -> . exp MAS termino
    (59) exp -> . exp MENOS termino
    (60) termino -> . factor
    (61) termino -> . termino POR factor
    (62) termino -> . termino DIV factor
    (63) factor -> . LPAREN expresion RPAREN
    (64) factor -> . MAS factor
    (65) factor -> . MENOS factor
    (66) factor -> . llamada
    (67) factor -> . ID
    (68) factor -> . cte
    (45) llamada -> . ID LPAREN RPAREN
    (46) llamada -> . ID LPAREN lista_args RPAREN
    (69) cte -> . CTE_ENT
    (70) cte -> . CTE_FLOT

    LPAREN          shift and go to state 68
    MAS             shift and go to state 65
    MENOS           shift and go to state 66
    ID              shift and go to state 61
    CTE_ENT         shift and go to state 71
    CTE_FLOT        shift and go to state 72

    expresion                      shift and go to state 77
    exp                            shift and go to state 63
    termino                        shift and go to state 64
    factor                         shift and go to state 67
    llamada                        shift and go to state 69
    cte                            shift and go to state 70

state 56

    (36) imprime -> ESCRIBE LPAREN . lista_imprime RPAREN PTOCOMA
    (37) lista_imprime -> . item_imprime
    (38) lista_imprime -> . lista_imprime COMA item_imprime
    (39) item_imprime -> . expresion
    (40) item_imprime -> . LETRERO
    (41) item_imprime -> . LETRERO_KW
    (49) expresion -> . exp
    (50) expresion -> . exp OPREL exp
    (57) exp -> . termino
    (58) exp -> . exp MAS termino
    (59) exp -> . exp MENOS termino
    (60) termino -> . factor
    (61) termino -> . termino POR factor
    (62) termino -> . termino DIV factor
    (63) factor -> . LPAREN expresion RPAREN
    (64) factor -> . MAS factor
    (65) factor -> . MENOS factor
    (66) factor -> . llamada
    (67) factor -> . ID
    (68) factor -> . cte
    (45) llamada -> . ID LPAREN RPAREN
    (46) llamada -> . ID LPAREN lista_args RPAREN
    (69) cte -> . CTE_ENT
    (70) cte -> . CTE_FLOT

    LETRERO         shift and go to state 81
    LETRERO_KW      shift and go to state 82
    LPAREN          shift and go to state 68
    MAS             shift and go to state 65
    MENOS           shift and go to state 66
    ID              shift and go to state 61
    CTE_ENT         shift and go to state 71
    CTE_FLOT        shift and go to state 72

    lista_imprime                  shift and go to state 78
    item_imprime                   shift and go to state 79
    expresion                      shift and go to state 80
    exp                            shift and go to state 63
    termino                        shift and go to state 64
    factor                         shift and go to state 67
    llamada                        shift and go to state 69
    cte                            shift and go to state 70

state 57

    (23) lista_params -> ID . DOSPTOS tipo pn_param

    DOSPTOS         shift and go to state 83


state 58

    (16) func_def -> tipo_retorno pn_func_inicio ID LPAREN params . RPAREN LBRACE vars_opcional cuerpo RBRACE pn_func_fin PTOCOMA

    RPAREN          shift and go to state 84


state 59

    (21) params -> lista_params .
    (24) lista_params -> lista_params . COMA ID DOSPTOS tipo pn_param

    RPAREN          reduce using rule 21 (params -> lista_params .)
    COMA            shift and go to state 85


state 60

    (22) params -> empty .

    RPAREN          reduce using rule 22 (params -> empty .)


state 61

    (67) factor -> ID .
    (45) llamada -> ID . LPAREN RPAREN
    (46) llamada -> ID . LPAREN lista_args RPAREN

    POR             reduce using rule 67 (factor -> ID .)
    DIV             reduce using rule 67 (factor -> ID .)
    MAS             reduce using rule 67 (factor -> ID .)
    MENOS           reduce using rule 67 (factor -> ID .)
    MAYOR           reduce using rule 67 (factor -> ID .)
    MENOR           reduce using rule 67 (factor -> ID .)
    DIF             reduce using rule 67 (factor -> ID .)
    IGUALDAD        reduce using rule 67 (factor -> ID .)
    MAYORIG         reduce using rule 67 (factor -> ID .)
    MENORIG         reduce using rule 67 (factor -> ID .)
    PTOCOMA         reduce using rule 67 (factor -> ID .)
    RPAREN          reduce using rule 67 (factor -> ID .)
    COMA            reduce using rule 67 (factor -> ID .)
    LPAREN          shift and go to state 53


state 62

    (35) asigna -> ID ASIG expresion . PTOCOMA

    PTOCOMA         shift and go to state 86


state 63
